# Lab2Check

./: .~lock.Feedback.ods#  CMakeLists.txt  Feedback.ods  main.cpp
Labs/: Questions
Labs/Antentyk/Antentyk_concurrency_task_2/: Makefile  checker.py  graph.html  main.cpp  results.txt
Labs/Batsenko&Zakharchenko/Archive/: config_with_params.json  data.csv  info.txt  using_threads.cpp
Labs/Batsenko__Zakharchenko/Archive/: config.json  multiple_threads  runer.py  single_thread  single_thread.cpp
Labs/Borsuk & Kosarevich/Integral_BorsukKosarevysh/: CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  additional_run.py  cmake_install.cmake  getconfig.cpp  getconfig.h  integral  integral.cpp  run.py  simple_integral  simple_integral.cpp
Labs/Borsuk & Kosarevich/Integral_BorsukKosarevysh/configs/: config.txt  config11.txt  config12.txt  config21.txt  config22.txt  config23.txt  config24.txt
Labs/Borsuk & Kosarevich/Integral_BorsukKosarevysh/vasiko_results/: notebook_desk.txt  result11.txt  result12.txt  result21.txt  result22.txt  result23.txt  result24.txt
Labs/Borsuk & Kosarevich/Integral_BorsukKosarevysh/vosar_results/: notebook_desc.txt  result11.txt  result12.txt  result21.txt  result22.txt  result23.txt  result24.txt
Labs/Bortkivski A/: newbag.cpp
Labs/BortkivskiB & Yuzkiv V/paralel2/: paralel  paralel2.cpp  script.py
Labs/Stepanjuk/: thr3.cpp
Labs/Tepljukh & Stasinchuk/HW_alpha_prerelease/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.txt  main.cpp
Labs/Tepljukh & Stasinchuk/HW_alpha_prerelease/__MACOSX/: ._CMakeLists.txt
Labs/Ursul/task/: CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  integral  integral.cpp  run.py
Labs/Ursul/task/cfgs/: config.ini
Labs/Yezhov/: Lab_3.rar
Labs/Zhuravchak/IntegralComputing_Andrew_Zhuravchak/: CMakeCache.txt  CMakeLists.txt  README.md  checker.sh  parallel.cpp
Late_Check/: temp_comm.txt
(+85 files in other folders)
